「使用方法」セクションを作成しました。

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <ul class="points-list">
           <li>
             <div class="point-title">
-              <div class="point-number">
+              <div class="list-number">
                 <span>point</span>
                 <p>01</p>
               </div>
@@ -186,7 +186,7 @@
           </li>
           <li>
             <div class="point-title">
-              <div class="point-number">
+              <div class="list-number">
                 <span>point</span>
                 <p>02</p>
               </div>
@@ -198,7 +198,7 @@
           </li>
           <li>
             <div class="point-title">
-              <div class="point-number">
+              <div class="list-number">
                 <span>point</span>
                 <p>03</p>
               </div>
@@ -211,7 +211,7 @@
           </li>
           <li>
             <div class="point-title">
-              <div class="point-number">
+              <div class="list-number">
                 <span>point</span>
                 <p>04</p>
               </div>
@@ -225,7 +225,7 @@
           </li>
           <li>
             <div class="point-title">
-              <div class="point-number">
+              <div class="list-number">
                 <span>point</span>
                 <p>05</p>
               </div>
@@ -237,7 +237,7 @@
           </li>
           <li>
             <div class="point-title">
-              <div class="point-number">
+              <div class="list-number">
                 <span>point</span>
                 <p>06</p>
               </div>
@@ -285,6 +285,51 @@
          </div>
        </div>
       </div>
+   </section>
+
+   <section id="usage">
+    <div class="container">
+      <div class="section-title usage-title">
+        <div class="usage-title-text">
+          <h3>アクシード ミネラル美容クリームtype3の</h3>
+          <h3>ご使用方法</h3>
+        </div>
+      </div>
+
+      <ul class="usage-description">
+        <li>
+          <div class="list-number usage-number">
+            <span>step</span>
+            <p>01</p>
+          </div>
+          <div class="usage-img">
+            <img src="img/usage01.jpg" alt="使用方法のイメージ写真です。">
+          </div>
+
+          <p class="usage-text">朝晩の洗顔後、適量を手に取り顔全体にたっぷりとなじませてください。</p>
+        </li>
+
+        <li>
+          <div class="list-number usage-number">
+            <span>step</span>
+            <p>02</p>
+          </div>
+          <div class="usage-img">
+            <img src="img/usage02.jpg" alt="使用方法のイメージ写真です。">
+          </div>
+
+          <p class="usage-text">化粧下地としてご使用される場合は、クリーム がお肌になじんでさらっとしてからメイクをしてください。</p>
+        </li>
+      </ul>
+
+      <div class="usage-point">
+        <div class="usage-point-title">
+          <p>point</p>
+        </div>
+
+        <p>目安として、10分以上お待ちいただくと、クリームがお肌にしっかりなじみます。</p>
+      </div>
+    </div>
    </section>
 
   </main>
