voices 作成を始めました。

--- a/index.html
+++ b/index.html
@@ -332,6 +332,23 @@
     </div>
    </section>
 
+   <section id="voices">
+    <div class="container">
+      <div class="section-title voices-title">
+        <div class="voices-title-img">
+          <img src="img/voices-title.png" alt="お客様の声をご紹介">
+        </div>
+      </div>
+
+      <ul class="voices-list">
+        <li>
+          
+        </li>
+      </ul>
+
+    </div>
+   </section>
+
   </main>
   <footer>
 
