お客様の声セクションを作成しました。

--- a/index.html
+++ b/index.html
@@ -342,10 +342,75 @@
 
       <ul class="voices-list">
         <li>
-          
+          <div class="voices-list-heading">
+            <div class="voice-icon">
+              <img src="img/voices-icon01.png" alt="お客様の声のアイコンです。">
+            </div>
+            <div class="speech-babble">
+              <p>
+                すごい、びっくり!しっとりスベスベのお肌になりました！
+              </p>
+            </div>
+          </div>
+
+          <div class="voices-list-text">
+            <p>オールインワンクリームって使うの始めてだったのでつけた時はさっぱりしていてイマイチかなと 思ったのですが、次の日の朝しっとりしていてスベスベになっていたのでびっくりしました。量も多いのでケチケチし ないでつける事ができるので助かっています。</p>
+          </div>
+          <p class="voices-name">GKさん 大阪府 40歳 女性</p>
+        </li>
+        <li>
+          <div class="voices-list-heading">
+            <div class="voice-icon">
+              <img src="img/voices-icon02.png" alt="お客様の声のアイコンです。">
+            </div>
+            <div class="speech-babble">
+              <p>
+                冬の乾燥対策もバッチリ！
+                2個目を購入しました。  
+              </p>
+            </div>
+          </div>
+
+          <div class="voices-list-text">
+            <p>脂性肌なのに乾燥肌で、冬の乾燥には困っていました。乳液などのクリーム類をつけると、肌荒れをすぐにおこしていたのですが、つけないとカサカサで...。でもこの美容クリームはしっとりうるおって、大丈夫 でした。これからも宜しくお願いします。</p>
+          </div>
+          <p class="voices-name">TYさん 神奈川県 36歳 女性</p>
+        </li>
+        <li>
+          <div class="voices-list-heading">
+            <div class="voice-icon">
+              <img src="img/voices-icon03.png" alt="お客様の声のアイコンです。">
+            </div>
+            <div class="speech-babble">
+              <p>
+                ついつい肌を触ってしまう潤い！もう手放せません。
+              </p>
+            </div>
+          </div>
+
+          <div class="voices-list-text">
+            <p>他社の美容クリームで失敗して、もうクリームは使わないと、心に決めていたのにこれに出会って、気持ちが変ってしまいました。</p>
+          </div>
+          <p class="voices-name">MRさん 埼玉県 28歳 女性</p>
+        </li>
+        <li>
+          <div class="voices-list-heading">
+            <div class="voice-icon">
+              <img src="img/voices-icon04.png" alt="お客様の声のアイコンです。">
+            </div>
+            <div class="speech-babble">
+              <p>
+                使い始めて9ヶ月、肌のくすみがなくなりました！
+              </p>
+            </div>
+          </div>
+
+          <div class="voices-list-text">
+            <p>母にもプレゼントして今年の肌は乾燥知らずでした。肌のくすみが なくなり友人に何を使っているの?とよく聞かれて、教えてあげています。友人もミネラル美容クリームのとりこです。</p>
+          </div>
+          <p class="voices-name">NSさん 東京都 33歳 女性</p>
         </li>
       </ul>
-
     </div>
    </section>
 
