FAQセクションを作成しました。

--- a/index.html
+++ b/index.html
@@ -423,54 +423,56 @@
         </div>
       </div>
 
-      <dl>
-        <div>
-          <dt class="animate from-bottom">
-            <div class="question-mark">Q</div>
-            <p>化粧下地として使った場合、ファンデーションを塗ると消しゴムのカスのようなものが出てくるのですが、ファンデーションとの相性が悪いのでしょうか?</p>
-            <div class="plus">+</div>
-          </dt>
-          <dd>
-            <div class="answer-mark">A</div>
-            <p>化粧下地としてお使いいただく場合は、薄めにのばして10分ほどお待ちいただき、お肌にしっかりとなじませてから、メイクアップをはじめるといいでしょう。すぐにメイクアップをしてしまいますと、カスが出てしまうこともございます。</p>
-          </dd>
-        </div>
-        <div>
-          <dt class="animate from-bottom">
-            <div class="question-mark">Q</div>
-            <p>UVカットはできますか?</p>
-            <div class="plus">+</div>
-          </dt>
-          <dd>
-            <div class="answer-mark">A</div>
-            <p>UVを直接抑制する効果はございません。ただ、「ミネラル美容クリーム」によってお肌が健康になると、皮脂が正常に分泌されるようになり、その皮脂が紫外線から守ってくれます。直射日光を浴びる場合は必ずUVカット商品をお使いください。</p>
-          </dd>
-        </div>
-        <div>
-          <dt class="animate from-bottom">
-            <div class="question-mark">Q</div>
-            <p>すぐにきれいな肌になりますか? </p>
-            <div class="plus">+</div>
-          </dt>
-          <dd>
-            <div class="answer-mark">A</div>
-            <p>個人差がございますので一概にはいえません。お肌の健康は毎日のスキンケアに加えて生活リズムや食生活にも左右されます。お使いいただく方によって様々な過程を経るでしょう。気長にお使いいただくことによって理想の状態 に近づいていきます。</p>
-          </dd>
-        </div>
-        <div>
-          <dt class="animate from-bottom">
-            <div class="question-mark">Q</div>
-            <p>敏感肌なのですが使えますか? </p>
-            <div class="plus">+</div>
-          </dt>
-          <dd>
-            <div class="answer-mark">A</div>
-            <p>「ミネラル美容クリームtype3」は刺激が少なく、敏感肌の方にも喜んでお使いいただいております。特に気になる場合はパッチテストなどを行ってからご使用ください。合わないと感じられた場合は使用を中止し専門医にご相談ください。</p>
-          </dd>
-        </div>
-
-
-      </dl>
+      <div class="container">
+        <dl>
+          <div>
+            <dt class="animate from-bottom">
+              <div class="question-mark">Q</div>
+              <p>化粧下地として使った場合、ファンデーションを塗ると消しゴムのカスのようなものが出てくるのですが、ファンデーションとの相性が悪いのでしょうか?</p>
+              <div class="plus">+</div>
+            </dt>
+            <dd>
+              <div class="answer-mark">A</div>
+              <p>化粧下地としてお使いいただく場合は、薄めにのばして10分ほどお待ちいただき、お肌にしっかりとなじませてから、メイクアップをはじめるといいでしょう。すぐにメイクアップをしてしまいますと、カスが出てしまうこともございます。</p>
+            </dd>
+          </div>
+          <div>
+            <dt class="animate from-bottom">
+              <div class="question-mark">Q</div>
+              <p>UVカットはできますか?</p>
+              <div class="plus">+</div>
+            </dt>
+            <dd>
+              <div class="answer-mark">A</div>
+              <p>UVを直接抑制する効果はございません。ただ、「ミネラル美容クリーム」によってお肌が健康になると、皮脂が正常に分泌されるようになり、その皮脂が紫外線から守ってくれます。直射日光を浴びる場合は必ずUVカット商品をお使いください。</p>
+            </dd>
+          </div>
+          <div>
+            <dt class="animate from-bottom">
+              <div class="question-mark">Q</div>
+              <p>すぐにきれいな肌になりますか? </p>
+              <div class="plus">+</div>
+            </dt>
+            <dd>
+              <div class="answer-mark">A</div>
+              <p>個人差がございますので一概にはいえません。お肌の健康は毎日のスキンケアに加えて生活リズムや食生活にも左右されます。お使いいただく方によって様々な過程を経るでしょう。気長にお使いいただくことによって理想の状態 に近づいていきます。</p>
+            </dd>
+          </div>
+          <div>
+            <dt class="animate from-bottom">
+              <div class="question-mark">Q</div>
+              <p>敏感肌なのですが使えますか? </p>
+              <div class="plus">+</div>
+            </dt>
+            <dd>
+              <div class="answer-mark">A</div>
+              <p>「ミネラル美容クリームtype3」は刺激が少なく、敏感肌の方にも喜んでお使いいただいております。特に気になる場合はパッチテストなどを行ってからご使用ください。合わないと感じられた場合は使用を中止し専門医にご相談ください。</p>
+            </dd>
+          </div>
+  
+  
+        </dl>
+      </div>
 
     </div>
    </section>
