footer 作成中です。

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1 class="header-logo">
           <a href="#">
-            <img src="img/acceed-logo2.png" alt="アクシード化粧品のロゴです。">
+            <img src="img/acceed-logo2.png" alt="アクシード化粧品のロゴ">
           </a>
         </h1>
     </div>
@@ -71,7 +71,7 @@
 
           <div class="products-inner">
             <div class="products-img">
-              <img src="img/campaign-img.jpg" alt="アクシード ミネラル美容クリームtype3の商品写真です。">
+              <img src="img/campaign-img.jpg" alt="アクシード ミネラル美容クリームtype3の商品写真">
               <div class="campaign-text">
                 <img src="img/campaign-text.png" alt="お出かけに便利な携帯用クリームプレゼント">
               </div>
@@ -266,7 +266,7 @@
 
          <div class="products-inner">
            <div class="products-img">
-             <img src="img/campaign-img.jpg" alt="アクシード ミネラル美容クリームtype3の商品写真です。">
+             <img src="img/campaign-img.jpg" alt="アクシード ミネラル美容クリームtype3の商品写真">
              <div class="campaign-text">
                <img src="img/campaign-text.png" alt="お出かけに便利な携帯用クリームプレゼント">
              </div>
@@ -303,7 +303,7 @@
             <p>01</p>
           </div>
           <div class="usage-img">
-            <img src="img/usage01.jpg" alt="使用方法のイメージ写真です。">
+            <img src="img/usage01.jpg" alt="使用方法のイメージ写真">
           </div>
 
           <p class="usage-text">朝晩の洗顔後、適量を手に取り顔全体にたっぷりとなじませてください。</p>
@@ -315,7 +315,7 @@
             <p>02</p>
           </div>
           <div class="usage-img">
-            <img src="img/usage02.jpg" alt="使用方法のイメージ写真です。">
+            <img src="img/usage02.jpg" alt="使用方法のイメージ写真">
           </div>
 
           <p class="usage-text">化粧下地としてご使用される場合は、クリーム がお肌になじんでさらっとしてからメイクをしてください。</p>
@@ -344,7 +344,7 @@
         <li>
           <div class="voices-list-heading">
             <div class="voice-icon">
-              <img src="img/voices-icon01.png" alt="お客様の声のアイコンです。">
+              <img src="img/voices-icon01.png" alt="お客様の声のアイコン">
             </div>
             <div class="speech-babble">
               <p>
@@ -361,7 +361,7 @@
         <li>
           <div class="voices-list-heading">
             <div class="voice-icon">
-              <img src="img/voices-icon02.png" alt="お客様の声のアイコンです。">
+              <img src="img/voices-icon02.png" alt="お客様の声のアイコン">
             </div>
             <div class="speech-babble">
               <p>
@@ -379,7 +379,7 @@
         <li>
           <div class="voices-list-heading">
             <div class="voice-icon">
-              <img src="img/voices-icon03.png" alt="お客様の声のアイコンです。">
+              <img src="img/voices-icon03.png" alt="お客様の声のアイコン">
             </div>
             <div class="speech-babble">
               <p>
@@ -396,7 +396,7 @@
         <li>
           <div class="voices-list-heading">
             <div class="voice-icon">
-              <img src="img/voices-icon04.png" alt="お客様の声のアイコンです。">
+              <img src="img/voices-icon04.png" alt="お客様の声のアイコン">
             </div>
             <div class="speech-babble">
               <p>
@@ -468,18 +468,33 @@
               <div class="answer-mark">A</div>
               <p>「ミネラル美容クリームtype3」は刺激が少なく、敏感肌の方にも喜んでお使いいただいております。特に気になる場合はパッチテストなどを行ってからご使用ください。合わないと感じられた場合は使用を中止し専門医にご相談ください。</p>
             </dd>
-          </div>
-  
-  
+          </div> 
         </dl>
       </div>
-
     </div>
    </section>
-
   </main>
   <footer>
-
+    <div class="container">
+      <ul class="company-details">
+        <li><a href="#">会社概要</a></li>
+        <li><a href="#">プライバシーポリシー</a></li>
+        <li><a href="#">特定商取引に関する法律に基づく表記</a></li>
+      </ul>
+  
+      <address>
+        <p>株式会社アクシード化粧品</p>
+        <div class="address">
+          <p>〒123-4567</p>
+          <p>東京都千代田区神田駿河台4-6</p>
+        </div>
+        <div class="phone">
+          <a href="tel:0120-123-456">0120-123-456</a>
+        </div>
+      </address>
+  
+      <small class="copyright">&copy; accceed company. All rights reserved.</small>
+    </div>
   </footer>
 
   <script src="js/main.js"></script> 
