footer作成しました。

--- a/index.html
+++ b/index.html
@@ -482,16 +482,22 @@
         <li><a href="#">特定商取引に関する法律に基づく表記</a></li>
       </ul>
   
-      <address>
-        <p>株式会社アクシード化粧品</p>
-        <div class="address">
+      <div class="company-info">
+        <h1 class="header-logo">
+          <a href="#">
+            <img src="img/acceed-logo2.png" alt="アクシード化粧品のロゴ">
+          </a>
+        </h1>
+        <address>
+          <p>株式会社アクシード化粧品</p>
           <p>〒123-4567</p>
           <p>東京都千代田区神田駿河台4-6</p>
-        </div>
+        </address>
+  
         <div class="phone">
           <a href="tel:0120-123-456">0120-123-456</a>
         </div>
-      </address>
+      </div>
   
       <small class="copyright">&copy; accceed company. All rights reserved.</small>
     </div>
