キャンペーンの申し込みボタンを実装しました。

--- a/index.html
+++ b/index.html
@@ -473,6 +473,13 @@
       </div>
     </div>
    </section>
+
+  <div class="container">
+    <a id="application-btn" href="http://xxx.co.jp/~sell/sell_cart.php?act=add&item_codes[]=A0802" target="_blank" rel="noopener noreferrer">
+      <img src="img/campaign-btn.png" alt="キャンペーンのお申し込みはこちら">
+    </a>
+  </div>
+  
   </main>
   <footer>
     <div class="container">
