main-visual、campaignセクションのレスポンシブを実装しました。

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="products">
-          <h3>アクシード ミネラル美容クリームtype3</h3>
+          <h3>アクシード<br class="products-title-pc"> ミネラル美容クリームtype3</h3>
 
           <div class="products-inner">
             <div class="products-img">
