usageセクションのレスポンシブを実装しました。

--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
        </div>
 
        <div class="products">
-         <h3>アクシード ミネラル美容クリームtype3</h3>
-
+        <h3>アクシード<br class="products-title-pc"> ミネラル美容クリームtype3</h3>
          <div class="products-inner">
            <div class="products-img">
              <img src="img/campaign-img.jpg" alt="アクシード ミネラル美容クリームtype3の商品写真">
@@ -291,7 +290,7 @@
     <div class="container">
       <div class="section-title usage-title">
         <div class="usage-title-text">
-          <h3>アクシード ミネラル美容クリームtype3の</h3>
+          <h3>アクシード<br class="products-title-pc"> ミネラル美容クリームtype3の</h3>
           <h3>ご使用方法</h3>
         </div>
       </div>
