footerのレスポンシブを実装しました。

--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
     <div class="container">
       <ul class="company-details">
         <li><a href="#">会社概要</a></li>
-        <li><a href="#">プライバシーポリシー</a></li>
-        <li><a href="#">特定商取引に関する法律に基づく表記</a></li>
+        <li><a href="#">プライバシー<br class="company-details-pc">ポリシー</a></li>
+        <li><a href="#">特定商取引に関する<br class="company-details-pc">法律に基づく表記</a></li>
       </ul>
   
       <div class="company-info">
