faviconの設定をしました。

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="アクシード ミネラル美容クリームtype3 10月限定キャンペーン"/>
   <meta property="og:locale" content="ja_JP"  />
   <title>アクシード ミネラル美容クリームtype3 10月限定キャンペーン</title>
-  <!-- <link rel="shortcut icon" href="img/favicon.ico"> -->
+  <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
