20%オフの画像の名称を変更しました。

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="products-price">
               <img src="img/campaign-price.png" alt="通常価格4850円が10月限定で3880円で販売">
               <div class="off-price">
-                <img src="img/campaign-20%off.png" alt="20%off">
+                <img src="img/campaign-20off.png" alt="20%off">
               </div>
             </div>
   
@@ -272,7 +272,7 @@
            <div class="products-price">
              <img src="img/campaign-price.png" alt="通常価格4850円が10月限定で3880円で販売">
              <div class="off-price">
-               <img src="img/campaign-20%off.png" alt="20%off">
+               <img src="img/campaign-20off.png" alt="20%off">
              </div>
            </div>
  
