idの付け間違いを修正しました。

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </div>
     </section>
 
-    <section id="campaign">
+    <section id="campaign-2">
       <div class="container">
        <div class="campaign-date">
          <img src="img/campaign-date.png" alt="10月1日から31日の今だけ！キャンペーンのご案内">
