noindex, nofollowを付けました。

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="透明美肌クリームで肌ケア。10月限定キャンペーン。20%オフ、携帯用クリームをもれなくプレゼント。アクシード ミネラル美容クリームtype3。" name="description">
+  <meta name=”robots” content=”noindex , nofollow”>
   <meta property="og:title" content="アクシード ミネラル美容クリームtype3 10月限定キャンペーン" />
   <meta property="og:description" content="透明美肌クリームで肌ケア。10月限定キャンペーン。20%オフ、携帯用クリームをもれなくプレゼント。アクシード ミネラル美容クリームtype3。" />
   <meta property="og:type" content="website" />
